CS_PROD_20150209_01/Metadata/unpackaged/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Client Services</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
        <values>
            <fullName>Waiting for Client Response</fullName>
        </values>
        <values>
            <fullName>Waiting for Internal Response</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DCS</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DCS Two</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Billing_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_State__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Street__c</fullName>
        <formula>Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Billing_Zip__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Billing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Website__c</fullName>
        <formula>Account.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <description>Added by LM on 2/6/2014 for Phase2 Rollout.</description>
        <label>Actual</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Contacts__c</fullName>
        <description>Created by LM on 3/4/2014 for Phase2</description>
        <label>Additional Contacts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Affected_CP_ID__c</fullName>
        <description>Created by LM on 2/6/2014 for Phase2</description>
        <label>Affected CP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>After Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Air_Date__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Air Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Air_Time__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Air Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Publication_Date__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Article Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_URL__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Article URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BAC__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>BAC #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable_Dollars__c</fullName>
        <description>Created by LM on 12/9/2013 for Phase2</description>
        <label>Billable Dollars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Billing Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <description>Created by LM on 12/9/2013 for Phase2</description>
        <label>Billing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Billable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Broadcast_Date__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Broadcast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broadcast_Quote_Filtered_Type__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Broadcast Quote Filtered Type</label>
        <picklist>
            <picklistValues>
                <fullName>Auto-Filtered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Broadcast_Quote_Source__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Broadcast Quote Source</label>
        <picklist>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Broadcast_Subtypes__c</fullName>
        <description>Created by LM on 5/28/2014 for Phase2 (for Michael Nadler)</description>
        <label>Broadcast Subtypes</label>
        <picklist>
            <picklistValues>
                <fullName>Audio/Visual Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Download Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Player Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Broadcast_Time__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Broadcast Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Browser</label>
        <picklist>
            <picklistValues>
                <fullName>Chrome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mozilla/Firefox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netscape</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safari</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Burrelles_Pricing__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Burrelles Pricing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Activity_ID__c</fullName>
        <description>Created by LM on 2/12/14 for Phase2</description>
        <label>CRM Activity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Case_ID__c</fullName>
        <description>Created by LM on 2/10/2014 for Phase2</description>
        <label>CRM Case ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSI_ID__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>CSI ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Product__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>CS Product</label>
        <picklist>
            <picklistValues>
                <fullName>Marketwired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CisionPoint: Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CisionPoint: Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CisionPoint: Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CisionPoint: Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navigator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seek or Shout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Trial__c</fullName>
        <description>Created by LM on 9/17/2013 for Phase 2 rollout</description>
        <label>Campaign Trial?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the Round Robin Allocation to determine whether this case has already been assigned an Owner</description>
        <label>Case Owner Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Broadcast Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burelles Contracts (New Biz)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burelles Contracts (Renewal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eNews Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/General Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pub Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote Quickly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPOST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Adjustment (Changing account reps)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Adjustment (Potential)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial Question, Modification or Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CisionPoint_Email__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>CisionPoint Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CisionPoint_ID__c</fullName>
        <formula>Account.CisionPoint_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CisionPoint ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CisionPoint_Login__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>CisionPoint Login</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CisionPoint_Username__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>CisionPoint Username</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_LN_ID__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Client LN ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <description>Created by LM on 9/17/2013 for Phase 2 rollout</description>
        <label>Close Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Outstanding technical issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training No Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <formula>Contact.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Provider__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Content Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Dates__c</fullName>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Contract Dates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>Created by LM on 9/9/2013 for Phase 2 rollout</description>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_End_Date__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Coverage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coverage_Start_Date__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Coverage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Created by LM on 9/17/2013 for Phase 2 rollout</description>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>US Dollar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Pounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Euro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Dollar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Broadcast_Service__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Current Broadcast Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Print_Rates__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Current Print Rates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DCS_Issue_Status__c</fullName>
        <description>Created by LM on 5/28/2014 for Phase2 (for Michael Nadler)</description>
        <label>DCS Issue Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Information Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DCS_Reasons__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>DCS Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Not missed.  Found in CP.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late capture.  Article was captured a few days after it was published.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Archive Range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Copyright/paywall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WISE, crawler settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WISE, site not monitored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WISE, drop-off in coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WISE, wrong portion of site crawled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WISE, sub-domain not ingested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mismapped/not mapped to correct Media ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dead link/link no longer active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full article not captured/captured incorrectly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Term omitted from article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no Key Term(s) found in article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyperlinks in article not captured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Term was a hyperlink and was not picked up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article is video/slideshow/gallery ONLY link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client settings need adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article not available for this plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need to update Search String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search Agent filters need update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexis Nexis, article not yet available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexis Nexis, verified article not available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexis Nexis, publication no longer monitored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moreover, crawler settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moreover, site not monitored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moreover, drop-off in coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moreover, wrong portion of site crawled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moreover, sub-domain not ingested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Daily_Email_Alert_Time__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Daily Email Alert Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataHub_Subtypes__c</fullName>
        <description>Created by LM on 5/28/2014 for Phase2 (for Michael Nadler)</description>
        <label>DataHub Subtypes</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dates_for_Extension__c</fullName>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Dates for Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Amount__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Deal Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Define_Issue__c</fullName>
        <description>Created by LM on 10/7/2013 for Phase 2 rollout</description>
        <label>Define Issue</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <description>Created by LM on 2/6/14 for Phase2 rollout</description>
        <label>Device</label>
        <picklist>
            <picklistValues>
                <fullName>PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <description>Created by LM on 9/17/2013 for Phase 2 rollout</description>
        <label>Distance</label>
        <picklist>
            <picklistValues>
                <fullName>US Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_they_want_digital_downloads__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Do they want digital downloads</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date_Time__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Due Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Edition</label>
        <picklist>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emails__c</fullName>
        <description>Created by LM on 9/17/2013 for Phase 2 rollout</description>
        <label>Emails</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Escalated_to_GSD_Date__c</fullName>
        <description>Created by LM on 2/6/2014 for Phase2.</description>
        <label>Escalated to GSD Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalated_to_Service_Desk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Escalated to Service Desk?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Deal_Amount__c</fullName>
        <description>Created by LM on 11/26/2013 for Phase 2 rollout</description>
        <label>Estimated Deal Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected__c</fullName>
        <description>Added by LM on 2/6/2014 for Phase2 Rollout.</description>
        <label>Expected</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expenses__c</fullName>
        <description>Created by LM on 12/9/2013 for Phase2</description>
        <label>Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extension_Date_Month_Compare__c</fullName>
        <formula>IF(Month(Extension_End_Date__c) = Month(Opportunity__r.Renewal_Due_Date__c), &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extension Date Month Compare</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension_End_Date__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Extension End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extension_Start_Date__c</fullName>
        <description>Created by LM on 9/16/2013 for Phase 2 rollout</description>
        <label>Extension Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feed_Setups_Subtypes__c</fullName>
        <description>Created by LM on 5/28/2014 for Phase2 (for Michael Nadler)</description>
        <label>Feed Setups Subtypes</label>
        <picklist>
            <picklistValues>
                <fullName>Gnip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radian6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burrelles Luce</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Follow-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GP_Cust_ID__c</fullName>
        <formula>Account.GP_Cust_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GP Cust ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IE_Version_Number__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>IE Version Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Status__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Issue Status</label>
        <picklist>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working as Designed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cannot Reproduce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More Information Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Investigation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jira_Number__c</fullName>
        <description>Created by LM on 8/27/2013 for Phase 2 rollout</description>
        <label>Jira Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Created by LM on 9/17/2013 for Phase 2 rollout</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Emailed__c</fullName>
        <label>Last Emailed</label>
        <type>DateTime</type>
    </fields>
</CustomObject>